# BinPickingCellControl

./: CMakeLists.txt  README.md  bin_challenge.bash  package.xml  requirements.txt  setup.py
include/BinPickingCellControl/: barcode_scanner.py  door_handle.py  emergency_button.py  light_stack.py
include/bin_picking_challenge/: door_handle.py  light_stack.py
scripts/: cell_sensors.py  client.py  hmi.py  server.py
